tests/NormalTests/paczka1/fuzzy1/46281501.err
Error in line 7: Oq0zfPmfNut S853 96,1
Error in line 6: uuaKyBr A937 67,3
Error in line 22: A937 S853 12,1
Error in line 20: QhIYwKG S15 99,8
Error in line 29: QhIYwKG A168 281,39
Error in line 37: Oq0zfPmfNut S853 24,0
